Add connection to database and Modify .env.sample accordingly.

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,6 @@
 # Server configuration
 SERVER_PORT = 8000
+
+# Database configuration
+DB_URI = "Your MongoDB database connection string"
+DB_NAME = "Your MongoDB database name"
