--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "dotenv": "^16.4.5",
+    "prettier": "3.2.5",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   }
