--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "start": "node dist/src/server.js",
     "dev": "tsx watch src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretty-quick": "npx pretty-quick --staged --no-restage --bail"
   },
   "author": "Tian Jie Wong",
   "license": "ISC",
@@ -22,8 +23,13 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "dotenv": "^16.4.5",
+    "pre-commit": "^1.2.2",
     "prettier": "3.2.5",
+    "pretty-quick": "^4.0.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "pre-commit": [
+    "pretty-quick"
+  ]
 }
