--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "envalid": "^8.0.0",
     "express": "^4.19.2",
     "mongodb": "^6.6.2"
   },
