--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 # Server configuration
 SERVER_PORT = 8000
 
+# App configuration
+PORT = 3000
+
 # Database configuration
 DB_URI = "Your MongoDB database connection string"
 DB_NAME = "Your MongoDB database name"
