Add Compose Watch feature to enable hot reloading.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,16 @@ services:
         required: true
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /app
+          ignore:
+            - node_modules
+        - action: rebuild
+          path: ./package.json
+          target: /app/package.json
 
   app:
     container_name: app
@@ -20,3 +30,13 @@ services:
         required: true
     ports:
       - ${PORT}:${PORT}
+    develop:
+      watch:
+        - action: sync
+          path: ./app
+          target: /app
+          ignore:
+            - node_modules
+        - action: rebuild
+          path: ./app/package.json
+          target: /app/package.json
