Fix Docker Compose Watch bug which only reloads server container for the first time.
More information on https://forums.docker.com/t/docker-compose-watch-and-rebuild/140248/5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
       - ${SERVER_PORT}:${SERVER_PORT}
     develop:
       watch:
-        - action: sync
+        - action: sync+restart
           path: .
           target: /app
           ignore:
             - node_modules
+            - app
         - action: rebuild
           path: ./package.json
           target: /app/package.json
