--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,7 @@
   "bracketSpacing": true,
   "bracketSameLine": false,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindConfig": "./app/tailwind.config.ts"
 }
