--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "pre-commit": "^1.2.2",
     "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "pretty-quick": "^4.0.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
