Add and configure prettier-plugin-sort-imports to automatically sort imports.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.6.2"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
