--- a/.github/workflows/push-pr-lint.yml
+++ b/.github/workflows/push-pr-lint.yml
@@ -10,6 +10,13 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+      - name: Install dependencies
+        working-directory: ./
+        run: npm install
       - name: Lint check all changed files using Prettier
         uses: creyD/prettier_action@v4.3
         with:
