--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
+    "framer-motion": "^11.2.12",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
